## Makefile sous répertoire KF Ray

INCLUDES = -I./ -I../raycaster -I../models -I../misc -I../loader -I../textures


noinst_LIBRARIES = libobjects.a

libobjects_a_SOURCES = \
	vector.c vector.h \
	scene.c scene.h \
	light.c light.h \
	material.c material.h \
	sphere.c sphere.h \
	plan.c plan.h \
	cylinder.c cylinder.h


